--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -5,7 +5,7 @@ on:
 
 jobs:
   test:
-    runs-on: self-hosted
+    runs-on: [self-hosted, docker]
     steps:
       - uses: actions/checkout@v4
       - run: echo "Hello from self-hosted runner"
