--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -5,12 +5,12 @@ on:
 
 jobs:
   test:
-    runs-on: [self-hosted, k8s]
+    runs-on: arc-runner-set
     steps:
       - run: echo "Hello from self-hosted runner"
       - run: uname -a
 
   hello:
-    runs-on: [self-hosted, k8s]
+    runs-on: arc-runner-ser
     steps:
       - run: echo "Hello from Kubernetes runner"
